# so_project

./: CMakeLists.txt  README.md  client.c  main.c  make  my_protocol.c  my_protocol.h
.history/: main_20190606160228.c  main_20190606160508.c  main_20190606161024.c  main_20190606161316.c  main_20190606161435.c  main_20190606161459.c  main_20190606161548.c  main_20190606161800.c  main_20190606161823.c  main_20190606162334.c  main_20190606162422.c  main_20190606163152.c  main_20190606163240.c  main_20190606163505.c  main_20190606163521.c  main_20190606163643.c  main_20190606163713.c  main_20190606163957.c  main_20190606164114.c  main_20190606164137.c  main_20190606164701.c  main_20190606164918.c  main_20190606165040.c  main_20190606165140.c  main_20190606165324.c  main_20190606170500.c
glade/: window_main.glade
